bind & valid
